[project]
name = "automatic-spam"
version = "0.1.0"
description = ""
authors = [{ name = "Fernando Garrido", email = "siberiancoffe@outlook.cl" }]
requires-python = ">=3.13,<3.14"
dependencies = ["pyperclip (>=1.9.0,<2.0.0)", "pyautogui (>=0.9.54,<0.10.0)", "pyinstaller (>=6.12.0,<7.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
